<resources>
    <string name="app_name">ProyectoFinalMoviles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textTitle">Titulo</string>
    <string name="textBudget">Presupuesto</string>
    <string name="duration">Duracion:</string>
    <string name="year">Fecha salida:</string>
    <string name="genre">Genero</string>
    <string name="minutes">minutos</string>
    <string name="percentaje">porcentaje</string>
    <string name="back">Volver</string>
    <string name="percentaje_example">95/100</string>
    <string name="resumen">Resumen</string>
    <string name="duration_example">124 mins</string>
    <string name="year_example">1986</string>
    <string name="ganancias_example">10000000 $</string>
    <string name="ganancias">Ganancias:</string>
    <string name="presupuesto_example">10000000 $</string>
    <string name="presupuesto">Presupuesto:</string>
    <string name="japan_example">La princesa mononoke</string>
    <string name="genero">Genero:</string>
    <string name="genero_example">Comedia</string>
    <string name="state">Estado:</string>
    <string name="hintUser">Username</string>
    <string name="butList">Peliculas</string>
    <string name="listFav">Peliculas Favoritas</string>
    <string name="credits">Creditos</string>
    <string name="salir">Salir</string>
    <string name="userInfo">Informacion usuario</string>
    <string name="first_tab">Esta es una aplicación en desarrollo con el objetivo de poder tener un catalogo de las peliculas que más le gustan al usuario además de poder hacer comentarios sobre ellas</string>
    <string name="second_tab">En esta zona se plantea ir añadiendo las novedades de la aplicación según se vayan añadiendo a esta.</string>
    <string name="menu">Menu</string>
    <string name="notice">Noticias</string>
    <string name="titulo_original">Titulo original:</string>
    <string name="ocultar">Ocultar noticias</string>
    <string name="Login">Login</string>
    <string name="Volver">Volver</string>
    <string name="comments">Comentarios (0)</string>
    <string name="placeholderUser">Email: Prueba@gmail.com \nCreation Date: 21/02/1999 </string>
    <string name="Nombre">Nombre:</string>
    <string name="UsernamePrueba">Prueba</string>
    <string name="films">Peliculas</string>
    <string name="favourite">Favoritos</string>
    <string name="personal">Usuario</string>
    <string name="photo">Foto</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="hacer_foto">Toma una foto</string>
    <string name="permisos">Debes dar los permisos necesarios</string>
</resources>